--- a/app/src/main/res/layout/activity_frm_buscar_maestro.xml
+++ b/app/src/main/res/layout/activity_frm_buscar_maestro.xml
@@ -31,4 +31,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
+
+    <fragment
+        android:id="@+id/fragmentxx"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblBuscarMaestros" />
+
+
 </android.support.constraint.ConstraintLayout>
