--- a/app/src/main/res/layout/activity_frm_buscar_cliente.xml
+++ b/app/src/main/res/layout/activity_frm_buscar_cliente.xml
@@ -4,10 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".frmBuscarCliente">
+    tools:context=".frmBuscarCliente"
+    android:background="#202732">
+
+
+
+    <ImageView
+        android:id="@+id/iv_Logo"
+        android:layout_width="413dp"
+        android:layout_height="79dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/maestro" />
 
     <TextView
-        android:id="@+id/tvMensaje"
+        android:id="@+id/lblBuscarCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -21,8 +35,20 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_Logo" />
 
+    <ListView
+        android:id="@+id/lstCliente"
+        android:layout_width="395dp"
+        android:layout_height="588dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblBuscarCliente" />
 
 
 </android.support.constraint.ConstraintLayout>
