--- a/app/src/main/res/layout/activity_frm_maestros.xml
+++ b/app/src/main/res/layout/activity_frm_maestros.xml
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/maestro" />
 
     <TextView
-        android:id="@+id/lblBuscarMaestros"
+        android:id="@+id/lblBuscarCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -51,7 +51,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblBuscarMaestros" />
+        app:layout_constraintTop_toBottomOf="@+id/lblBuscarCliente" />
 
 
     <Button
