modulos_Buscar Cliente_ Contactar cliente_mapas

--- a/app/src/main/res/layout/activity_frm_contactar_cliente.xml
+++ b/app/src/main/res/layout/activity_frm_contactar_cliente.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".frmMaestros"
+    tools:context=".frmContactarCliente"
     android:background="#202732">
-
 
     <ImageView
         android:id="@+id/iv_Logo"
@@ -19,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/maestro" />
 
+
     <TextView
         android:id="@+id/lblContactarCliente"
         android:layout_width="wrap_content"
@@ -29,7 +29,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="Menu Maestro"
+        android:text="Contactar Cliente"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Nombre"
@@ -53,77 +53,57 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblContactarCliente" />
 
-
-    <Button
-        android:id="@+id/btnMarcarUbicacionMaestro"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:background="@drawable/boton_redondo"
-        android:onClick="btnMarcarUbicacionMaestro_click"
-        android:text="Ubicación Maestro Disponible"
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="358dp"
+        android:layout_height="171dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="#00574B"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="Aquí ingrese un comentario para el cliente"
+        android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblNombreCliente" />
 
     <Button
-        android:id="@+id/btnMaestroNoDisponible"
+        android:id="@+id/btnEnviar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="28dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:background="@drawable/boton_redondo"
-        android:onClick="btnMaestroNoDisponible_click"
-        android:text="Maestro no Disponible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMarcarUbicacionMaestro" />
-
-    <Button
-        android:id="@+id/btnBuscarCliente"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:background="@drawable/boton_redondo"
-        android:onClick="btnBuscarCliente_click"
-        android:text="Buscar Cliente"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMaestroNoDisponible" />
-
-
-    <Button
-        android:id="@+id/btnEvaluarCliente"
-        android:layout_width="166dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/boton_redondo2"
-        android:onClick="btnEvaluarCliente_click"
-        android:text="Evaluar Cliente"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/boton_redondo"
+        android:text="Enviar comentario"
+        app:layout_constraintBottom_toTopOf="@+id/btnBuscarMapa"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-
+    <Button
+        android:id="@+id/btnBuscarMapa"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/boton_redondo"
+        android:onClick="btnBuscarMapa_click"
+        android:text="Buscar en el Mapa"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
