--- a/app/src/main/res/layout/activity_frm_buscar_cliente.xml
+++ b/app/src/main/res/layout/activity_frm_buscar_cliente.xml
@@ -21,7 +21,7 @@
         app:srcCompat="@drawable/maestro" />
 
     <TextView
-        android:id="@+id/lblBuscarCliente"
+        android:id="@+id/lblContactarCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -48,7 +48,7 @@
         android:layout_marginRight="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblBuscarCliente" />
+        app:layout_constraintTop_toBottomOf="@+id/lblContactarCliente" />
 
 
 </android.support.constraint.ConstraintLayout>
