--- a/app/src/main/res/layout/activity_frm_buscar_maestro.xml
+++ b/app/src/main/res/layout/activity_frm_buscar_maestro.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/maestro" />
 
     <TextView
-        android:id="@+id/lblBuscarCliente"
+        android:id="@+id/lblContactarCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -40,7 +40,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblBuscarCliente" />
+        app:layout_constraintTop_toBottomOf="@+id/lblContactarCliente" />
 
 
 </android.support.constraint.ConstraintLayout>
